# file_conversor

./: .dockerignore  .file_conversor.log.2025-07-31  .gitignore  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  FEATURE_SET.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  babel.cfg  eslint.config.mjs  go.mod  go.sum  package-lock.json  package.json  project.yml  pyproject.toml  run_build.ps1  run_cli.ps1  run_exe.ps1  run_gen_docs.ps1  run_git_commit.ps1  run_tests.ps1  setup.iss  sonar-project.properties  tasks.py
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: FUNDING.yml
.github/workflows/: choco.yaml  docker.yaml  gh.yaml  publish_choco.yaml  publish_git.yaml  pypi.yaml  release.yaml  release.yml  scoop.yaml
assets/: README.md
bucket/: file_conversor.json
choco/: README.md  file_conversor.nuspec
choco/tools/: VERIFICATION.txt  chocolateyInstall.ps1  chocolateyUninstall.ps1
cmd/: README.md
cmd/file_conversor/: main.go
docs/: search.js  src.html
docs/src/: backend.html  cli.html  config.html  file_conversor.html  utils.html
docs/src/backend/: backend_abstract.html  ffmpeg_backend.html  pypdf_backend.html
docs/src/cli/: audio_video_cmd.html  config_cmd.html  pdf_cmd.html
docs/src/config/: config.html  locale.html  state.html
docs/src/utils/: file.html  formatters.html  rich.html  validators.html
hooks/: hook-ocrmypdf.py
internal/: README.md
internal/cli/: custom_types.go  main_cli.go  pdf_cli.go
internal/env/: dirs.go  exec.go  file.go
internal/logger/: config.go  fanout_handler.go  format.go  level.go  pretty_handler.go  setup.go
internal/pdf/: merge.go
internal/utils/: exec.go
locales/en_US/LC_MESSAGES/: messages.po
locales/hi_IN/LC_MESSAGES/: messages.mo  messages.po
locales/pt_BR/LC_MESSAGES/: messages.po
packaging/: README.md
packaging/choco/: file_conversor.nuspec.tmpl
packaging/choco/tools/: chocolateyInstall.ps1.tmpl  chocolateyUninstall.ps1.tmpl
packaging/homebrew-tap/Formula/: file_conversor.rb.tmpl
packaging/innosetup/: setup.iss  setup.iss.tmpl
packaging/linux/: postinstall.sh  preinstall.sh
packaging/nfpm/: nfpm.yaml.tmpl  postinstall.sh.tmpl  postremove.sh.tmpl  preinstall.sh.tmpl  preremove.sh.tmpl
packaging/scoop/: file_conversor.json.tmpl
scripts/: README.md  _env.sh  build.sh  clean.sh  docker_build.sh  docker_push.sh  get_python_version.py  get_python_version.sh  install_app.py  install_choco.ps1  install_python.ps1  install_scoop.ps1  package.sh  postremove.sh  preremove.sh  publish.sh  qt_designer.ps1  run_cli.ps1  run_gui.ps1  terminalizer.ps1
setup/: install_choco.ps1  setup.iss
src/: __init__.py  app.py  file_conversor.py
src/backend/: __init__.py  abstract_backend.py  backend_abstract.py  batch_backend.py  ffmpeg_backend.py  img2pdf_backend.py  pillow_backend.py  pypdf_backend.py  qpdf_backend.py  win_reg_backend.py
src/cli/: __init__.py  app_cmd.py  audio_video_cmd.py  batch_cmd.py  config_cmd.py  image_cmd.py  pdf_cmd.py  win_cmd.py
src/config/: __init__.py  config.py  locale.py  log.py  state.py
src/dependency/: __init__.py  abstract_pkg_manager.py  brew_pkg_manager.py  scoop_pkg_manager.py
src/file_conversor/: __init__.py  __main__.py  main_helper.py
src/file_conversor/.gui/: card.qss  drag_drop_list.qss  main.qss  sidebar.qss  statusbar.qss
src/file_conversor/backend/: __init__.py  abstract_backend.py  batch_backend.py  docx2pdf_backend.py  ffmpeg_backend.py  git_backend.py  hash_backend.py  http_backend.py  img2pdf_backend.py  lin_desktop_backend.py  pdf2docx_backend.py  pillow_backend.py  pymupdf_backend.py  pymusvg_backend.py  pypdf_backend.py  qpdf_backend.py  text_backend.py  win_reg_backend.py  word_backend.py  writer_backend.py
src/file_conversor/cli/: __init__.py  __main__.py  _typer.py  app_cmd.py  audio_video_cmd.py  batch_cmd.py  config_cmd.py  doc_cmd.py  image_cmd.py  pdf_cmd.py  svg_cmd.py  win_cmd.py
src/file_conversor/command/: __init__.py  abstract_cmd.py  data_models.py  progress_manager.py
src/file_conversor/config/: __init__.py  cleanup.py  config.py  dataclass_enforce_types.py  environment.py  locale.py  log.py  self_tests.py  state.py
src/file_conversor/dependency/: __init__.py  abstract_pkg_manager.py  apt_pkg_manager.py  brew_pkg_manager.py  dnf_pkg_manager.py  scoop_pkg_manager.py
src/file_conversor/gui/: __init__.py  __main__.py  _utils.py  flask_app.py  flask_route.py  home_frame.py  info_frame.py  routes.py
src/file_conversor/system/: __init__.py  abstract_system.py  context_menu.py
src/file_conversor/tests/: __init__.py  conftest.py  utils.py
src/file_conversor/utils/: __init__.py  abstract_register_manager.py  bulma_utils.py  command_manager.py  ema_eta.py  file.py  formatters.py  progress_manager.py  protocols.py  rich.py  rich_utils.py  typer.py  typer_utils.py  (+1 more)
src/file_conversor_core/: __init__.py  main.py
src/file_conversor_gui/: __init__.py  __main__.py
src/system/: __init__.py  dummy.py  lin.py  mac.py  win.py
src/utils/: __init__.py  file.py  formatters.py  rich.py  validators.py
tasks_modules/: __init__.py  _config.py  _deps.py  base.py  choco.py  docker.py  embedpy.py  git.py  inno.py  locales.py  pyapp.py  pyinstaller.py  pypi.py  scoop.py  zip.py
testdata/: README.md
tests/: conftest.py  test_main.py  utils.py
tests/.data/: test.docx  test.heif  test.ini  test.pptx  test.yaml
tests/backend/: test_abstract_backend.py  test_backend_abstract.py  test_ffmpeg_backend.py
tests/cli/: test_app__init.py  test_app_cmd.py  test_audio_video.py  test_batch_cmd.py  test_config_cmd.py  test_image_cmd.py  test_pdf_cmd.py  test_pipeline_cmd.py  test_svg_cmd.py  test_win_cmd.py
tests/config/: test_dataclass_enforce_type.py
tests/dependency/: test_abstract_pkg_manager.py  test_brew_pkg_manager.py  test_scoop_pkg_manager.py
tests/file_conversor/: utils.py
tests/system/: test_win.py
tests/utils/: test_file.py  test_formatters.py  test_validators.py
tools/: README.md
tools/build_packages/: main.go
tools/gen_packages/: main.go
uml/: README.md  class.puml
(+976 files in other folders)
