# pyproject.toml

[project]
name = "file_conversor"
version = "0.8.0"
description = "Universal file conversor for multimedia files (audio, video, pdf, docs, etc)"
authors = [{ name = "Andre Luiz Romano Madureira", email = "andre@domain.com" }]
dependencies = [
    "pytest>=8.4.1",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "Babel>=2.17.0",
    "pypdf>=5.8.0",
    "cryptography>=45.0.5",
    "pillow>=11.3.0",
    "img2pdf>=0.6.1",
    "pywin32>=311; sys_platform == 'win32'",
    "pymupdf>=1.26.3",
    "pdf2docx>=0.5.8",
    "pyyaml>=6.0.2",
    "xmltodict>=0.14.2",
    "toml>=0.10.2",
    "concurrent-log-handler>=0.9.28",
    "portalocker>=3.2.0",
    "ocrmypdf>=16.11.0",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "pycountry>=24.6.1",
    "platformdirs>=4.5.0",
    "natsort>=8.4.0",
    "pydantic>=2.12.5",
]
requires-python = ">=3.12,<=3.14.2"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*", "NOTICE*", "THIRD_PARTY*", "AUTHORS.md", "README.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent", 
] 
keywords = ["file", "conversion", "multimedia", "pdf", "doc", "video", "audio", "image", "converter"]

[project.urls]
Homepage = "https://github.com/andre-romano/file_conversor"

[project.scripts]
# CLI command =  module:entry_point
file_conversor = "file_conversor.__main__:main" 

[project.optional-dependencies]
gui = [
    "pyside6>=6.10.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pydeps>=3.0.1",
    "invoke>=2.2.0",
    "twine>=6.1.0",
    "polib>=1.2.0",
    "deep-translator>=1.11.4",
    "requests>=2.32.5",
    "pip-licenses>=5.5.0",
    "pylint>=4.0.4",
    "ruff>=0.15.0",
]

[tool.pdm] 
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.setuptools.package-data]
file_conversor = [
    "*", # package src/file_conversor/*
]

[tool.myproject]
title = "File Conversor"
data_path = "src/file_conversor/.data"
icons_path = "src/file_conversor/.icons"
locales_path = "src/file_conversor/.locales"

[tool.pytest.ini_options]
testpaths = ["src/file_conversor/tests"]
addopts = "--cache-clear --ff --color=yes --cov=src --cov-report=html --cov-report=xml"
filterwarnings = [
    "ignore:The 'is_flag' and 'flag_value' parameters are not supported by Typer",
    # supress pymupdf warnings
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute",
    "ignore:builtin type SwigPyObject has no __module__ attribute",
]

[tool.ruff]
# controls which rules are reported (warnings)
select = [
    "I", # Import-order rules
    "B", # flake8-bugbear rules (code quality and likely bugs)
    "F", # Pyflakes rules (logical errors)
    "N", # Naming convention rules
    "S", # Security issues
    "SLF", # private member rules (ex: private members that are not used, private members that are used outside of their class, etc)
    "RET", # return-related rules (ex: functions that return None but are not annotated with Optional, functions that have inconsistent return types, etc)
    "ARG", # argument-related rules (ex: functions that have too many arguments, functions that have arguments that are not used, etc)
    "PIE", # Pie rules (ex: functions that are too complex, functions that have too many branches, etc)
    "PLE", # Pylint errors (code that is likely to cause errors, code that is not following best practices, etc)
    "PLW", # Pylint warnings (code that is not following best practices, code that is likely to cause errors, etc)
    "SIM", # similarity rules (ex: code that is duplicated, code that is similar to other code, etc)
    # "C90", # McCabe complexity (complexity for functions and methods)
    "C4", # McCabe complexity (complexity for list and dict comprehensions)
]
# controls which rule warnings are ignored (not reported) - might still be fixed by the --fix option, or VSCode's Ruff extension
ignore = [
    "I001", # Unsorted imports diagnostic (no warning - fixer will still sort them)
    "B008", # do not perform function calls in argument defaults
    "B017", # assert ExceptionType is not specific enough
    "B021", # f-string docstrings are not supported
    "E501", # line too long
    "W291", # trailing whitespace
    "W293", # blank line contains whitespace
    "F403", # 'from module import *' used; unable to detect undefined names
    "F405", # name may be undefined, or defined from star imports
    "F541", # f-string is missing placeholders
    "N802", # function name should be lowercase
    "N806", # variable in function should be lowercase
    "N818", # Exception name should be named with an Error suffix
    "S101", # use of assert detected. The enclosed code will be removed when compiling to optimised bytecode.
    "S110", # try-except-pass detected. 
    "S112", # try-except-continue detected. 
    "S201", # Flask debug mode is enabled.
    "RET504", # Unnecessary assignment to `process` before `return` statement    
    "SIM212", # if expressions that check against a negated condition.
]

[tool.ruff.lint.isort]
order-by-type = true # true = Classes < Constants < Functions < Variables
combine-as-imports = true # true = from x import y, z 
force-single-line = false # false = do not force single line imports
force-sort-within-sections = false # false = do not mix "from" with "import"
case-sensitive = false # false = ignore case when sorting
known-first-party = ["src", "file_conversor"] # first-party modules
lines-between-types = 1
lines-after-imports = 2

[tool.pyright]
# Specify the language server (Pylance should be set by default if using Pyright)
languageServer = "Pylance"
typeCheckingMode = "strict"      # Type checking mode (options: "off", "basic", "strict")
diagnosticMode = "workspace"    # Diagnostic mode (options: "workspace", "openFiles")

extraPaths = ["src"]            # Extra search path
autoSearchPaths = true          # Automatically adds paths to the environment
indexing = true                 # Enable indexing for better suggestions
useLibraryCodeForTypes = true   # Use type stubs from libraries for better error detection

# CODE ISSUES
reportImportCycles = "error"      # Importacao circular - importacoes que criam ciclos entre modulos
reportUnreachable = "error"             # unreachable code
reportUnnecessaryIsInstance = "none" # isinstance() call that can be simplified

# TYPE ISSUES
reportUnknownLambdaType = "none" # lambda functions with unknown types
reportMissingReturnType = "warning" # Missing return types
reportMissingParameterType = "warning" # Missing parameter types

# CLASS ISSUES
reportMissingSuperCall = "error"           # missing super() call in a constructor
reportUninitializedInstanceVariable = "error"  # uninitialized instance variables
reportPropertyTypeMismatch = "error" # Property type mismatch - type of property does not match type of getter/setter

# Exclude files from analysis
ignore = [
    "**/__pycache__/**",
    "**/build/**",
    "**/dist/**",
    "**/docs/**",
    "**/venv/**",
    "**/.venv/**",    
    "**/.tox/**",
    "**/.nox/**",
    "**/.coverage/**",
    "**/.mypy_cache/**",
    "**/.pytest_cache/**",
    "**/*.egg-info",
    "**/*.bak",
    "**/*.egg",
    "**/*.pyc",
]

exclude = [
    "**/__pycache__/**",
    "**/build/**",
    "**/dist/**",
    "**/docs/**",
    "**/venv/**",
    "**/.venv/**",    
    "**/.tox/**",
    "**/.nox/**",
    "**/.coverage/**",
    "**/.mypy_cache/**",
    "**/.pytest_cache/**",
    "**/*.egg-info",
    "**/*.bak",
    "**/*.egg",
    "**/*.pyc",
]
